# Matholib

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
examples/: usage_example.py
matholib/: __init__.py  core.py
mathovenv/: pyvenv.cfg
tests/: test_core.py
