[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matholib"
version = "0.1.0"
authors = [
  { name="Krishna Tandon", email="tandonkrishna1208@gmail.com" },
]
description = "A simple math library"
readme = "README.md"
requires-python = ">=3.7"